Cherry-pick 260252@main (ff7c48892878). https://bugs.webkit.org/show_bug.cgi?id=249844

[GTK] Uploading any media uses too much memory
    https://bugs.webkit.org/show_bug.cgi?id=249844

    Reviewed by Michael Catanzaro.

    Stop serializing the HTTP body as part of ResourceRequest since we don't
    really need to send the request body over IPC.

    * Source/WebCore/platform/network/ResourceRequestBase.h:
    * Source/WebCore/platform/network/soup/ResourceRequest.h:
    (WebCore::ResourceRequest::ResourceRequest):
    (WebCore::ResourceRequest::encodingRequiresPlatformData const):
    * Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:
    (WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties):
    (WebCore::ResourceRequest::fromResourceRequestData):
    (WebCore::ResourceRequest::getRequestDataToSerialize const):
    (WebCore::ResourceRequest::getResourceRequestPlatformData const): Deleted.
    * Source/WebKit/NetworkProcess/NetworkLoad.cpp:
    (WebKit::updateRequest):
    * Source/WebKit/NetworkProcess/soup/NetworkDataTaskSoup.cpp:
    (WebKit::NetworkDataTaskSoup::continueHTTPRedirection):
    * Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

    Canonical link: https://commits.webkit.org/260252@main