Source/WebKit/NetworkProcess/NetworkLoad.cpp
@@ -100,7 +100,6 @@ static inline void updateRequest(ResourceRequest& currentRequest, const Resource
 #if PLATFORM(COCOA)
     currentRequest.updateFromDelegatePreservingOldProperties(newRequest.nsURLRequest(HTTPBodyUpdatePolicy::DoNotUpdateHTTPBody));
 #else
-    // FIXME: Implement ResourceRequest::updateFromDelegatePreservingOldProperties. See https://bugs.webkit.org/show_bug.cgi?id=126127.
     currentRequest.updateFromDelegatePreservingOldProperties(newRequest);
 #endif
 }
